--- a/app/src/main/res/layout/cities.xml
+++ b/app/src/main/res/layout/cities.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/cityTextView"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardCity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="CityName" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/cityTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="9dp"
+            android:text="CityName"
+            android:textSize="18sp" />
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
