--- a/app/src/main/res/layout/header_weather.xml
+++ b/app/src/main/res/layout/header_weather.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/teal_700">
+    android:background="@color/secondary">
 
     <ImageView
         android:id="@+id/imageViewRepoToolBar"
@@ -18,6 +18,6 @@
         android:layout_height="wrap_content"
         android:padding="14dp"
         android:text="Town, Country"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="18sp" />
 </LinearLayout>
