--- a/app/src/main/res/layout/weather.xml
+++ b/app/src/main/res/layout/weather.xml
@@ -5,205 +5,206 @@
     android:layout_height="wrap_content"
     android:padding="7.5dp">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#9A9A9A"
-        app:cardCornerRadius="15dp">
+        android:orientation="vertical">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="5dp"
+            app:cardBackgroundColor="@color/secondary"
+            app:cardCornerRadius="15dp">
 
-            <TextView
-                android:id="@+id/textViewDate"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:padding="5dp"
-                android:text="Tuesday, 4 May 2021"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="5dp"
-                app:cardBackgroundColor="@color/secondary"
-                app:cardCornerRadius="15dp">
+                <TextView
+                    android:id="@+id/textViewDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:padding="5dp"
+                    android:text="Tuesday, 4 May 2021"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="5dp"
                     android:orientation="vertical"
                     android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/weatherText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Weather"
+                        android:textAlignment="center"
+                        android:textColor="#FFFFFF"
+                        android:textSize="36sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/weatherDescriptiontextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Description"
+                        android:textAlignment="center"
+                        android:textColor="@color/text_secondary1"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:id="@+id/weatherImageView"
+                        android:layout_width="130dp"
+                        android:layout_height="100dp"
+                        app:srcCompat="@android:drawable/btn_star_big_on" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="5dp"
-                        android:orientation="vertical"
-                        android:padding="5dp">
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/weatherText"
+                            android:id="@+id/degreesTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Weather"
+                            android:text="29°"
                             android:textAlignment="center"
-                            android:textColor="#FFFFFF"
-                            android:textSize="36sp"
+                            android:textColor="@color/text"
+                            android:textSize="48sp"
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/weatherDescriptiontextView"
+                            android:id="@+id/feelsTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Description"
+                            android:text="Feels like 30°"
                             android:textAlignment="center"
-                            android:textSize="18sp" />
+                            android:textColor="@color/text_secondary1"
+                            android:textSize="16sp" />
 
                     </LinearLayout>
 
+                </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:padding="5dp"
+                    app:cardBackgroundColor="#FFFFFF"
+                    app:cardCornerRadius="15dp">
+
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:orientation="horizontal"
                         android:padding="5dp">
 
-                        <ImageView
-                            android:id="@+id/weatherImageView"
-                            android:layout_width="130dp"
-                            android:layout_height="100dp"
-                            app:srcCompat="@android:drawable/btn_star_big_on" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:orientation="vertical">
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:padding="5dp">
 
                             <TextView
-                                android:id="@+id/degreesTextView"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="29°"
+                                android:text="Humidity"
                                 android:textAlignment="center"
-                                android:textColor="#FFFFFF"
-                                android:textSize="48sp"
+                                android:textColor="@color/text_secondary" />
+
+                            <TextView
+                                android:id="@+id/textViewHumidity"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="68%"
+                                android:textAlignment="center"
+                                android:textColor="@color/text"
+                                android:textSize="18sp"
                                 android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/feelsTextView"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="Feels like 30°"
-                                android:textAlignment="center"
-                                android:textSize="16sp" />
-
                         </LinearLayout>
 
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:padding="5dp">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Wind"
+                                android:textAlignment="center"
+                                android:textColor="@color/text_secondary" />
+
+                            <TextView
+                                android:id="@+id/textViewWind"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="33 m/s"
+                                android:textAlignment="center"
+                                android:textColor="@color/text"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:padding="5dp">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Pressure"
+                                android:textAlignment="center"
+                                android:textColor="@color/text_secondary" />
+
+                            <TextView
+                                android:id="@+id/textViewPressure"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="1021 hPa"
+                                android:textAlignment="center"
+                                android:textColor="@color/text"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+
+
                     </LinearLayout>
 
-                </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="5dp"
-                app:cardBackgroundColor="#A17D0F"
-                app:cardCornerRadius="15dp">
+        </androidx.cardview.widget.CardView>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="5dp">
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:padding="5dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Humidity"
-                            android:textAlignment="center" />
-
-                        <TextView
-                            android:id="@+id/textViewHumidity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="68%"
-                            android:textAlignment="center"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:padding="5dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Wind"
-                            android:textAlignment="center" />
-
-                        <TextView
-                            android:id="@+id/textViewWind"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="33 m/s"
-                            android:textAlignment="center"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:padding="5dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Pressure"
-                            android:textAlignment="center" />
-
-                        <TextView
-                            android:id="@+id/textViewPressure"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="1021 hPa"
-                            android:textAlignment="center"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </RelativeLayout>
