--- a/app/src/main/res/layout/fragment_location_permission.xml
+++ b/app/src/main/res/layout/fragment_location_permission.xml
@@ -11,13 +11,13 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="15dp">
 
             <TextView
                 android:id="@+id/textView2"
@@ -35,13 +35,14 @@
                 android:padding="5dp">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/permissionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="Request Location" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textViewCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
