--- a/app/src/main/res/layout/fragment_location_permission.xml
+++ b/app/src/main/res/layout/fragment_location_permission.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:padding="5dp"
-    tools:context=".UserInterface.Fragments.LocationPermission">
+    tools:context=".UserInterface.Fragments.LocationPermissionFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.cardview.widget.CardView
