--- a/app/src/main/res/layout/fragment_switch_on_gps.xml
+++ b/app/src/main/res/layout/fragment_switch_on_gps.xml
@@ -38,15 +38,13 @@
                     android:id="@+id/gpsButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:padding="5dp"
                     android:text="Switch on Location" />
 
                 <TextView
                     android:id="@+id/textViewCancel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:padding="5dp"
                     android:text="Cancel"
                     android:textAlignment="center"
